--- a/banner.css
+++ b/banner.css
@@ -19,6 +19,7 @@ body {
 /* --------------- battas my work --------------- */
 
 .banner {
+    margin-top: 70px;
     position: relative;
     padding: 2rem 1rem;
     margin-bottom: 2rem;
